deployment/manifest-templates/ingress-nginx-namespace-template.yaml
# Template variables and secrets:
#   -
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ingress-nginx
spec: {}
status: {}
