deployment/manifest-templates/rap-namespace-template.yaml
# Template variables and secrets:
#   NAMESPACE_NAME: ${NAMESPACE_NAME}
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ${NAMESPACE_NAME}
spec: {}
status: {}
