deployment/manifest-templates/enroll-deployment-template.yaml
# Template variables and secrets:
#   NAMESPACE_NAME    : ${NAMESPACE_NAME}
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: enroll
  name: enroll
  namespace: ${NAMESPACE_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enroll
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: enroll
    spec:
      containers:
        - image: ampersandtarski/enroll:latest
          name: enroll
          ports:
            - containerPort: 80
          resources: {}
status: {}
