deployment/manifest-templates/rap-deployment-template.yaml
# Tempplate variables:
#   DOMAIN_NAME: ${DOMAIN_NAME}
#   NAMESPACE_NAME: ${NAMESPACE_NAME}
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: rap
  name: rap
  namespace: ${NAMESPACE_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rap
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rap
    spec:
      serviceAccountName: elevated-rights-service-account
      containers:
        - image: ampersandtarski/ampersand-rap:2023-04-28
          name: ampersand-rap
          ports:
            - containerPort: 80
          resources: {}
