deployment/manifest-templates/student-prototype-deployment-template.yaml
# Template variables and secrets:
#   NAMESPACE_NAME    : ${NAMESPACE_NAME} 
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: student-prototype
  name: student-prototype
  namespace: ${NAMESPACE_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-prototype
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: student-prototype
    spec:
      containers:
        - image: ampersandtarski/rap4-student-prototype:v1.2.0
          name: rap4-student-prototype
          resources: {}
