deployment/manifest-templates/enroll-service-template.yaml
# Template variables and secrets:
#   NAMESPACE_NAME    : ${NAMESPACE_NAME} 
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: enroll
  name: enroll
  namespace: ${NAMESPACE_NAME}
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: enroll
  type: ClusterIP
status:
  loadBalancer: {}
