deployment/manifest-templates/rap-service-template.yaml
# Template variables and secrets:
#   NAMESPACE_NAME: ${NAMESPACE_NAME}
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rap
  name: rap
  namespace: ${NAMESPACE_NAME}
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: rap
  type: ClusterIP
status:
  loadBalancer: {}
