deployment/manifest-templates/enroll-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${ENROLL_NAME}-ingress
  namespace: ${NAMESPACE_NAME}
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${ENROLL_NAME}.${DOMAIN_NAME}
      secretName: ${ENROLL_NAME}-tls
  rules:
    - host: ${ENROLL_NAME}.${DOMAIN_NAME}
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: ${ENROLL_NAME}
                port:
                  number: 80
