deployment/manifest-templates/rap-ingress-template.yaml
# Tempplate variables:
#   DOMAIN_NAME: ${DOMAIN_NAME}
#   NAMESPACE_NAME: ${NAMESPACE_NAME}
#   LETSENCRYPT_PRIVATE_KEY: ${LETSENCRYPT_PRIVATE_KEY}
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rap-ingress
  namespace: ${NAMESPACE_NAME}
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "${LETSENCRYPT_PRIVATE_KEY}"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${DOMAIN_NAME}
      secretName: rap-tls
  rules:
    - host: ${DOMAIN_NAME}
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: rap
                port:
                  number: 80
